--- a/src/assets/i18n/fil.json
+++ b/src/assets/i18n/fil.json
@@ -51,7 +51,7 @@
     "tutorial": {
       "org_name": "Anikultura",
       "title": "Anikultura!",
-
+      "tutorial_language_1": "Pumili ng lengwahe, puwede mo ito maiba pagkatapos ng tutorial na ito.",
       "tutorial_text_1": "Maligayang Pagdating sa ",
       "tutorial_text_1-1": "Pindutin ang 'susunod' o i-swipe ang screen para pumunta sa sunod na pahina.",
       "tutorial_title_2": "Paano magamit ang Anikultura?",
