--- a/src/assets/i18n/jp.json
+++ b/src/assets/i18n/jp.json
@@ -10,6 +10,7 @@
   },
 
   "tutorial": {
+    "tutorial_language_1": "Pilia ang imong gusto nga lengguwahe, mahimo nimo kini usbon pagkahuman sa kini nga panudlo.",
     "title": "アニクルトラへ!",
     "welcome_text": "ようこそ "
   }
