--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,11 +2,15 @@
   "home": {
     "title": "Anikultura",
     "welcome_text": "Welcome to Anikultura",
+    "report-modal-header": "Submit a report",
     "report-button-header": "You can proceed if ",
     "report-button-footer": "A photo must be taken before submitting a report",
     "camera-button": "Take a photo of your proof",
     "camera-footer": "This will open your camera",
     "seed-confirmation": "What will you plant?",
+    "marketable-confirmation": "How much did you actually produce?",
+    "submit-report": "Submit report",
+    "submitting-report": " Submitting report",
     "image-submission": "Your report will be reviewed by the admin",
     "stage-1_title": "Start submitting a report",
     "stage-1_button": "Received Starter Kit ",
