--- a/src/assets/i18n/fil_PH.json
+++ b/src/assets/i18n/fil_PH.json
@@ -2,11 +2,15 @@
     "home": {
       "title": "Anikultura",
       "welcome_text": "Maligayang pagdating sa ",
+      "report-modal-header": "Magsumite ng report",
       "report-button-header": "Maari kang magpatuloy kung",
       "report-button-footer": "Kailangan kumuha ng litrato bago magsumite ng report",
       "camera-button": "Kumuha ng litrato ng iyong patunay",
       "camera-footer": "Bubuksan nito ang iyong kamera",
-      "seed-confirmation": "Ano ang iyong itatanim",
+      "seed-confirmation": "Ano ang iyong itatanim?",
+      "marketable-confirmation": "Ilan ang iyong aktwal na nakilong bunga?",
+      "submit-report": "Isumite ang report",
+      "submitting-report": " Sinusumite ang report",
       "image-submission": "Ang iyong report ay susuriin pa ng iyong tagapamahala",
       "stage-1_title": "Simulan ang pagsumite ng report",
       "stage-1_button": "Nakuha na ang Starter Kit",
