Add missing seeds translation

--- a/src/assets/i18n/ceb.json
+++ b/src/assets/i18n/ceb.json
@@ -8,6 +8,7 @@
     "camera-button": "Pagkuha og litrato sa imong pruweba",
     "camera-footer": "Kini magbukas sa imong camera",
     "seed-confirmation": "Unsa imong itanom?",
+    "seed-missing": "Kinahanglan nga adunay gigahin nga mga liso. Palihug kontaka ang usa ka admin o big brother.",
     "marketable-confirmation": "Pila gyud ang imong naprodyus?",
     "submit-report": "Isumiter ang report",
     "submitting-report": "Pagsumite sa report",
