--- a/src/assets/i18n/fil_PH.json
+++ b/src/assets/i18n/fil_PH.json
@@ -8,6 +8,7 @@
       "camera-button": "Kumuha ng litrato ng iyong patunay",
       "camera-footer": "Bubuksan nito ang iyong kamera",
       "seed-confirmation": "Ano ang iyong itatanim?",
+      "seed-missing": "Kailangan mong magkaroon ng alokasyon ng mga buto. Mangyaring makipag-ugnayan sa isang admin o big brother.",
       "marketable-confirmation": "Ilan ang iyong aktwal na nakilong bunga?",
       "submit-report": "Isumite ang report",
       "submitting-report": " Sinusumite ang report",
