[Fix] Add API updates and fix bugs (#21)
* Update packages using targeted 16.17.x version

* Specify node version and use npm ci

* Upgrade to Angular 13

* Update tslib

* Update API response handling

* Update linting dependencies

* Lint

* Fix get crops method

* Update profile page computation

* Fix birthday type

* Rename fil to fil_PH language file

* Make language preference persistent

* Make Filipino default language in tutorial

* Fix seed stage translation

* Fix translation spec

* Make report modal translatable

* Add report modal translations

* Make Ingles to English and remove router links

* Add missing seeds prompt

* Add missing seeds translation

--- a/src/assets/i18n/fil_PH.json
+++ b/src/assets/i18n/fil_PH.json
@@ -2,11 +2,16 @@
     "home": {
       "title": "Anikultura",
       "welcome_text": "Maligayang pagdating sa ",
+      "report-modal-header": "Magsumite ng report",
       "report-button-header": "Maari kang magpatuloy kung",
       "report-button-footer": "Kailangan kumuha ng litrato bago magsumite ng report",
       "camera-button": "Kumuha ng litrato ng iyong patunay",
       "camera-footer": "Bubuksan nito ang iyong kamera",
-      "seed-confirmation": "Ano ang iyong itatanim",
+      "seed-confirmation": "Ano ang iyong itatanim?",
+      "seed-missing": "Kailangan mong magkaroon ng alokasyon ng mga buto. Mangyaring makipag-ugnayan sa isang admin o big brother.",
+      "marketable-confirmation": "Ilan ang iyong aktwal na nakilong bunga?",
+      "submit-report": "Isumite ang report",
+      "submitting-report": " Sinusumite ang report",
       "image-submission": "Ang iyong report ay susuriin pa ng iyong tagapamahala",
       "stage-1_title": "Simulan ang pagsumite ng report",
       "stage-1_button": "Nakuha na ang Starter Kit",
