--- a/src/assets/i18n/ceb.json
+++ b/src/assets/i18n/ceb.json
@@ -2,11 +2,16 @@
   "home": {
     "title": "Anikultura",
     "welcome_text": "Welcome sa Anikultura",
+    "report-modal-header": "Pagsumite ug report",
     "report-button-header": "Mahimo nimong ipadayon kung ",
     "report-button-footer": "Kinahanglang kuhaan og litrato sa dili pa mosumiter og report",
     "camera-button": "Pagkuha og litrato sa imong pruweba",
     "camera-footer": "Kini magbukas sa imong camera",
     "seed-confirmation": "Unsa imong itanom?",
+    "seed-missing": "Kinahanglan nga adunay gigahin nga mga liso. Palihug kontaka ang usa ka admin o big brother.",
+    "marketable-confirmation": "Pila gyud ang imong naprodyus?",
+    "submit-report": "Isumiter ang report",
+    "submitting-report": "Pagsumite sa report",
     "image-submission": "Ang imong report susihon sa admin",
     "stage-1_title": "Pagsugod sa pagsumite ug report",
     "stage-1_button": "Nakadawat Starter Kit ",
