Added, submitted review status translations in the homepage and JSON scripts.

--- a/src/assets/i18n/ceb.json
+++ b/src/assets/i18n/ceb.json
@@ -12,6 +12,7 @@
     "marketable-confirmation": "Pila gyud ang imong naprodyus?",
     "submit-report": "Isumiter ang report",
     "submitting-report": "Pagsumite sa report",
+    "submitted-review-status": "Kini nga taho wala gisusi",
     "image-submission": "Ang imong report susihon sa admin",
     "stage-1_title": "Pagsugod sa pagsumite ug report",
     "stage-1_button": "Nakadawat Starter Kit ",
