--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -12,6 +12,7 @@
     "marketable-confirmation": "How much did you actually produce?",
     "submit-report": "Submit report",
     "submitting-report": " Submitting report",
+    "submitted-review-status": "This report has not been reviewed",
     "image-submission": "Your report will be reviewed by the admin",
     "stage-1_title": "Start submitting a report",
     "stage-1_button": "Received Starter Kit ",
