--- a/src/assets/i18n/fil_PH.json
+++ b/src/assets/i18n/fil_PH.json
@@ -12,6 +12,7 @@
       "marketable-confirmation": "Ilan ang iyong aktwal na nakilong bunga?",
       "submit-report": "Isumite ang report",
       "submitting-report": " Sinusumite ang report",
+      "submitted-review-status": "Ang itong report ay hindi pa nasusuri",
       "image-submission": "Ang iyong report ay susuriin pa ng iyong tagapamahala",
       "stage-1_title": "Simulan ang pagsumite ng report",
       "stage-1_button": "Nakuha na ang Starter Kit",
